--- a/config.yaml
+++ b/config.yaml
@@ -1,5 +1,10 @@
 applications:
 - name: HelloWorld
+  route_prefix: /
   import_path: serve_app:app   # <module>:<object>
+  runtime_env:
+    local_working_dir: ./
   deployments:
     - name: HelloWorld
+      ray_actor_options:
+        num_cpus: 1.0
